--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Calculator</title>
 </head>
 <body>
+    <div class="main-container">
+        <div class="button-container-left">
+            <button id="c" class="number">C</button>
+            <button id="posneg" class="number">+/-</button>
+            <button id="percent" class="number">%</button>
+            <button id="divide" class="operator">÷</button>
+        </div>
+        <div class="button-container-left">
+            <button id="7" class="number">7</button>
+            <button id="8" class="number">8</button>
+            <button id="9" class="number">9</button>
+            <button id="multiply" class="operator">x</button>
+        </div>
+        <div class="button-container-left">
+            <button id="4" class="number">4</button>
+            <button id="5" class="number">5</button>
+            <button id="6" class="number">6</button>
+            <button id="subtract" class="operator">-</button>
+        </div>
+        <div class="button-container-left">
+            <button id="1" class="number">1</button>
+            <button id="2" class="number">2</button>
+            <button id="3" class="number">3</button>
+            <button id="sum" class="operator">+</button>
+        </div>
+        <div class="button-container-left-bottom">
+            <button id="zero" class="number">0</button>
+            <button id="decimal" class="number">.</button>
+            <button id="equals" class="operator">=</button>
+        </div>
+    </div>
     <script src="./app.js"></script>
 </body>
 </html>
