--- a/index.html
+++ b/index.html
@@ -10,34 +10,34 @@
     <div id="main-container">
         <div id="display-container">
         </div>
-        <div class="button-container-left">
-            <button id="clear">C</button>
-            <button id="posneg">+/-</button>
-            <button id="percent">%</button>
-            <button id="divide" class="operator">÷</button>
+        <div class="button-container-left calculator-keys">
+            <button class="clear">C</button>
+            <button class="posneg">+/-</button>
+            <button class="percent">%</button>
+            <button class="operator">÷</button>
         </div>
-        <div class="button-container-left">
-            <button id="7" class="number">7</button>
-            <button id="8" class="number">8</button>
-            <button id="9" class="number">9</button>
-            <button id="multiply" class="operator">x</button>
+        <div class="button-container-left calculator-keys">
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button class="operator">x</button>
         </div>
-        <div class="button-container-left">
-            <button id="4" class="number">4</button>
-            <button id="5" class="number">5</button>
-            <button id="6" class="number">6</button>
-            <button id="subtract" class="operator">-</button>
+        <div class="button-container-left calculator-keys">
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button class="operator">-</button>
         </div>
-        <div class="button-container-left">
-            <button id="1" class="number">1</button>
-            <button id="2" class="number">2</button>
-            <button id="3" class="number">3</button>
-            <button id="sum" class="operator">+</button>
+        <div class="button-container-left calculator-keys">
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button class="operator">+</button>
         </div>
-        <div class="button-container-left-bottom">
-            <button id="zero" class="number">0</button>
-            <button id="decimal" class="decimal">.</button>
-            <button id="equals" class="equals">=</button>
+        <div class="button-container-left-bottom calculator-keys">
+            <button class="number zero">0</button>
+            <button class="decimal">.</button>
+            <button class="operator">=</button>
         </div>
     </div>
     <script src="./app.js"></script>
